// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ethGetBlockByHashJsonRpcProcedure should handle requests without an id 1`] = `
{
  "baseFeePerGas": "0x7",
  "blobGasUsed": "0x0",
  "difficulty": "0x0",
  "excessBlobGas": "0x0",
  "extraData": "0x",
  "gasLimit": "0x1c9c380",
  "gasUsed": "0x5208",
  "hash": "0xd5c6fb8547f642937fac28ed08bac378b24fa000017029cf7e52996e2af217d6",
  "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  "miner": "0x0000000000000000000000000000000000000000",
  "mixHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "nonce": "0x0000000000000000",
  "number": "0x1",
  "parentBeaconBlockRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "parentHash": "0x63b5bacdb65c8c9d10e77d77d40bda5b4dc010a4f7e02a10bdea21a2b1b0a454",
  "receiptsRoot": "0xf78dfb743fbd92ade140711c8bbc542b5e307f0ab7984eff35d751969fe57efa",
  "requests": undefined,
  "requestsRoot": undefined,
  "sha3Uncles": "0x1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
  "size": "0x6d1",
  "stateRoot": "0xd417e9ddb1cd7255747c7a5ea9b703fea4851b04aa2917ca5d4e8b12ec0efe0f",
  "timestamp": "0x6683628e",
  "totalDifficulty": "0x0",
  "transactions": [
    "0x53f34b8aec96f115c92c8e49f3ec2abe1cb606d59e07732e3be76408628991f5",
  ],
  "transactionsRoot": "0x728f001e8385a75fdb87571fa02a8ac4ec71211f4e292e48d11c2aa36a7aca29",
  "uncles": [],
  "withdrawals": [],
  "withdrawalsRoot": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
}
`;

exports[`ethGetBlockByHashJsonRpcProcedure should include transactions if requested 1`] = `
{
  "baseFeePerGas": "0x7",
  "blobGasUsed": "0x0",
  "difficulty": "0x0",
  "excessBlobGas": "0x0",
  "extraData": "0x",
  "gasLimit": "0x1c9c380",
  "gasUsed": "0x5208",
  "hash": "0xd5c6fb8547f642937fac28ed08bac378b24fa000017029cf7e52996e2af217d6",
  "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  "miner": "0x0000000000000000000000000000000000000000",
  "mixHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "nonce": "0x0000000000000000",
  "number": "0x1",
  "parentBeaconBlockRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "parentHash": "0x63b5bacdb65c8c9d10e77d77d40bda5b4dc010a4f7e02a10bdea21a2b1b0a454",
  "receiptsRoot": "0xf78dfb743fbd92ade140711c8bbc542b5e307f0ab7984eff35d751969fe57efa",
  "requests": undefined,
  "requestsRoot": undefined,
  "sha3Uncles": "0x1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
  "size": "0x6d1",
  "stateRoot": "0xd417e9ddb1cd7255747c7a5ea9b703fea4851b04aa2917ca5d4e8b12ec0efe0f",
  "timestamp": "0x6683628e",
  "totalDifficulty": "0x0",
  "transactions": [
    {
      "accessList": [],
      "blobVersionedHashes": undefined,
      "blockHash": "0xd5c6fb8547f642937fac28ed08bac378b24fa000017029cf7e52996e2af217d6",
      "blockNumber": "0x1",
      "data": "0x",
      "from": "0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266",
      "gas": "0x5a3c",
      "gasPrice": "0x7",
      "hash": "0x53f34b8aec96f115c92c8e49f3ec2abe1cb606d59e07732e3be76408628991f5",
      "maxFeePerBlobGas": undefined,
      "maxFeePerGas": "0x7",
      "maxPriorityFeePerGas": "0x0",
      "nonce": "0x0",
      "to": "0x0101010101010101010101010101010101010101",
      "transactionIndex": "0x0",
      "type": "0x2",
      "value": "0x1a4",
    },
  ],
  "transactionsRoot": "0x728f001e8385a75fdb87571fa02a8ac4ec71211f4e292e48d11c2aa36a7aca29",
  "uncles": [],
  "withdrawals": [],
  "withdrawalsRoot": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
}
`;

exports[`ethGetBlockByHashJsonRpcProcedure should return block details by hash 1`] = `
{
  "baseFeePerGas": "0x7",
  "blobGasUsed": "0x0",
  "difficulty": "0x0",
  "excessBlobGas": "0x0",
  "extraData": "0x",
  "gasLimit": "0x1c9c380",
  "gasUsed": "0x5208",
  "hash": "0xd5c6fb8547f642937fac28ed08bac378b24fa000017029cf7e52996e2af217d6",
  "logsBloom": "0x00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
  "miner": "0x0000000000000000000000000000000000000000",
  "mixHash": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "nonce": "0x0000000000000000",
  "number": "0x1",
  "parentBeaconBlockRoot": "0x0000000000000000000000000000000000000000000000000000000000000000",
  "parentHash": "0x63b5bacdb65c8c9d10e77d77d40bda5b4dc010a4f7e02a10bdea21a2b1b0a454",
  "receiptsRoot": "0xf78dfb743fbd92ade140711c8bbc542b5e307f0ab7984eff35d751969fe57efa",
  "requests": undefined,
  "requestsRoot": undefined,
  "sha3Uncles": "0x1dcc4de8dec75d7aab85b567b6ccd41ad312451b948a7413f0a142fd40d49347",
  "size": "0x6d1",
  "stateRoot": "0xd417e9ddb1cd7255747c7a5ea9b703fea4851b04aa2917ca5d4e8b12ec0efe0f",
  "timestamp": "0x6683628e",
  "totalDifficulty": "0x0",
  "transactions": [
    "0x53f34b8aec96f115c92c8e49f3ec2abe1cb606d59e07732e3be76408628991f5",
  ],
  "transactionsRoot": "0x728f001e8385a75fdb87571fa02a8ac4ec71211f4e292e48d11c2aa36a7aca29",
  "uncles": [],
  "withdrawals": [],
  "withdrawalsRoot": "0x56e81f171bcc55a6ff8345e692c0f86e5b48e01b996cadc001622fb5e363b421",
}
`;
